[gd_scene load_steps=4 format=3 uid="uid://dq7oeex84vneg"]

[ext_resource type="Script" path="res://scripts/object_scripts/enemy_endless.gd" id="1_ockj6"]
[ext_resource type="PackedScene" uid="uid://44hbug2elpac" path="res://assets/blend/kuyang.blend" id="2_d77ws"]

[sub_resource type="SphereShape3D" id="SphereShape3D_iix87"]
radius = 0.75

[node name="enemy-flying" type="Area3D"]
script = ExtResource("1_ockj6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("SphereShape3D_iix87")

[node name="RayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 0.8)

[node name="RayCast_playermover" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 8)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="kuyang" parent="." instance=ExtResource("2_d77ws")]
transform = Transform3D(0.305045, 0, 0, 0, 0.305045, 0, 0, 0, 0.305045, -0.00631237, -0.511109, -0.0988748)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
volume_db = 2.0
max_distance = 20.0

[node name="Timer_Moan" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[connection signal="tree_entered" from="CollisionShape3D" to="." method="_on_collision_shape_3d_tree_entered"]
[connection signal="tree_exited" from="CollisionShape3D" to="." method="_on_collision_shape_3d_tree_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer_Moan" to="." method="moan"]
